# weather-gpt

./: .dockerignore  .env.example  .gitignore  Dockerfile  FASTMCP_DEPLOYMENT.md  README.md  env.example  gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  weather_server.py
src/frontend/: main.js
src/weather_gpt/: __init__.py  app.py  chat_locale.py  chat_loop.py  config.py  logging_setup.py
src/weather_gpt/graph/: __init__.py  chat.py
src/weather_gpt/llm/: __init__.py  adapters.py
src/weather_gpt/weather/: __init__.py  cache.py  service.py  tools.py
static/css/: app.css  base.css  chat.css  fonts.css  layout.css  locale.css  nav.css  responsive.css  theme-light.css  theme-toggle.css  tokens.css
static/i18n/: cs.json  en.json
static/js/: app.js  chat.js  locale.js  markdown.js  theme.js
templates/: index.html
tests/: __init__.py  conftest.py  test_adapters.py  test_app.py  test_cache.py  test_graph.py  test_logging_setup.py  test_weather_tools.py
